# matterchat

./: README.md  dataset.py  inference.py  pyproject.toml  task_templates.json  train.py  train_stage1.py  train_stage2.py
config/: inference_MatterChat.yaml
data_sample/: C_Si_SiC_new_similarity_hull.pickle  RAG_embedding_val_sim_res.pkl  Si.cif  Y3Fe5O12.cif  mp1001021.cif  mp10198.cif  mp1028281.cif  mp3202380.cif  mp3206774.cif
inference_log/: MatterChat_p1_Figure_5_raw_output.out  MatterChat_p1_RAG_Figure_5_Table1_output.out
model/: llava.py  matterchat_llava.py  matterchat_module.py
output_dir/: conversation_log_GaN.out  conversation_log_Si.out  conversation_log_Y3Fe5O12.out  conversation_log_mp1001021.out  conversation_log_mp10198.out  conversation_log_mp1028281.out  conversation_log_mp3202380.out  conversation_log_mp3206774.out
